# vkEasy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/compute/: CMakeLists.txt  main.cpp
examples/graphics/: CMakeLists.txt  main.cpp
examples/testing/: CMakeLists.txt  main.cpp
examples/vkCompute/: CMakeLists.txt  headless.comp
examples/vkEasyCompute/: CMakeLists.txt  headless.comp  main.cpp
examples/vkEasyGraphics/: CMakeLists.txt  main.cpp
examples/vkEasyGraphicsDepthBuffer/: CMakeLists.txt  main.cpp
examples/vkEasyGraphicsModel/: CMakeLists.txt  main.cpp  shader.frag  shader.vert  stb_image.h
examples/vkEasyGraphicsTexture/: CMakeLists.txt  main.cpp
examples/vkEasyGraphicsUniformBuffer/: CMakeLists.txt  main.cpp
examples/vkEasyGraphicsVertexIndexBuffers/: CMakeLists.txt  main.cpp
examples/vkGraphics/: CMakeLists.txt  main.cpp
extras/: CMakeLists.txt
include/vkEasy/: Context.h  Device.h  Error.h  Framebuffer.h  GLFWWindow.h  Graph.h  MemoryAllocator.h  Node.h  ShaderStage.h  SwapChain.h  Utils.h  WSI.h  global.h  vkEasy.h
include/vkEasy/nodes/: BufferCopyNode.h  ComputeNode.h  GraphicsNode.h  MemoryCopyNode.h  MemoryReadNode.h  MemoryWriteNode.h  Nodes.h  PipelineNode.h  PresentNode.h  ResourceReadNode.h  ResourceWriteNode.h
include/vkEasy/nodes/base/: Node.h  PipelineNode.h  ResourceOperationNode.h
include/vkEasy/resources/: AttachmentImage.h  Buffer.h  ColorAttachment.h  DepthStencilBuffer.h  Image.h  IndexBuffer.h  Resources.h  StagingBuffer.h  StorageBuffer.h  SwapChainImage.h  TextureImage.h  UniformBuffer.h  VertexBuffer.h
include/vkEasy/resources/base/: Attachment.h  Buffer.h  Image.h  Resource.h
src/vkEasy/: Context.cpp  Device.cpp  Error.cpp  Framebuffer.cpp  GLFWWindow.cpp  Graph.cpp  MemoryAllocator.cpp  Node.cpp  Resource.cpp  ShaderStage.cpp  SwapChain.cpp  WSI.cpp  global.cpp
src/vkEasy/nodes/: BufferCopyNode.cpp  ComputeNode.cpp  GraphicsNode.cpp  MemoryCopyNode.cpp  MemoryReadNode.cpp  MemoryWriteNode.cpp  PipelineNode.cpp  PresentNode.cpp  ResourceReadNode.cpp  ResourceWriteNode.cpp
src/vkEasy/nodes/base/: Node.cpp  PipelineNode.cpp  ResourceOperationNode.cpp
src/vkEasy/resources/: AttachmentImage.cpp  Buffer.cpp  ColorAttachment.cpp  DepthStencilBuffer.cpp  Image.cpp  IndexBuffer.cpp  StagingBuffer.cpp  StorageBuffer.cpp  SwapChainImage.cpp  TextureImage.cpp  UniformBuffer.cpp  VertexBuffer.cpp
src/vkEasy/resources/base/: Attachment.cpp  Buffer.cpp  Image.cpp  Resource.cpp
